--- a/components/main.admin-3/do_admin_breadcrumb.css
+++ b/components/main.admin-3/do_admin_breadcrumb.css
@@ -4,6 +4,7 @@
 	display: inline-block;
 	padding: 0 12px;
 	vertical-align: middle;
+	width: calc( 100% - 200px );
 }
 #do_admin .mainbar > .top > .breadcrumb > a {
 	color: #bbb;
@@ -40,5 +41,8 @@
 	display: inline-block;
 	margin-left: 10px;
 	position: relative; top: 3px; left: 0px;
+}
+#do_admin .mainbar > .top > .breadcrumb a:hover {
+	color: #ddd !important;
 }
 
