--- a/templates/Default/template/header.template.htm
+++ b/templates/Default/template/header.template.htm
@@ -1,5 +1,20 @@
 ﻿
 <header>
-	<a class="home" href="{_URL}">{main_title}</a>
+	
+	<div class="middle">
+		
+		<a alt="{main_title}" title="{main_title}" class="logo-container" href="{_URL}"><img alt="{main_title}" title="{main_title}" src="{_URL}/templates/{_THEME}/images/logo-postgah.png"/></a>
+		
+		{pgItem_header_search_form}
+
+		<a href="" class="new_ads">ارسال آگهی رایگان</a>
+		<a href="" class="login_or_register">ورود / عضویت</a>
+
+		{breadcrumb}
+
+	</div>
+
 	{anchor_back_to_admin_if_logged}
 </header>
+
+
