--- a/components/pgItem_display/pgItem_display_slide.css
+++ b/components/pgItem_display/pgItem_display_slide.css
@@ -1,14 +1,15 @@
 
 .pgItem_display_slide {
 	position: relative;
-	padding-top: 50px;
+	/* padding-top: 50px; */
 }
 .pgItem_display_slide .item_name {
-    position: absolute;
-    right: 5px;
-    top: 0px;
+    /* position: absolute; */
+    /* right: 5px; */
+    /* top: 0px; */
     font-weight: bold;
     font-size: 20px;
+    padding-left: 130px;
 }
 .pgItem_display_slide .item_code {
 	position: absolute;
