fix login and register

--- a/components/billing-4/billing_user_payment.css
+++ b/components/billing-4/billing_user_payment.css
@@ -107,6 +107,9 @@
 	margin: 7px 24px 0 0;
 	display: block;
 }
-
+.billing_userpanel_payment .convbox {
+	padding: 30px 40px;
+	font-size: 12px;
+}
 
 
