--- a/components/users-1/users_login_form.css
+++ b/components/users-1/users_login_form.css
@@ -39,6 +39,7 @@
 	font: normal 10px tahoma;
 	display: block;
 	margin: 15px 2px 0 0;
+	width: 140px;
 }
 #users_login_form .d05 {
 	font: normal 10px tahoma;
