--- a/templates/Default/template/main.template.htm
+++ b/templates/Default/template/main.template.htm
@@ -1,7 +1,7 @@
 
 {layout_header}
 
-<main>
+<main class="page_{_PAGE}">
 	{layout_layer("right")}
 	{layout_layer("center")}
 	{layout_layer("left")}
