--- a/components/pgItem_display/pgItem_display_detail.css
+++ b/components/pgItem_display/pgItem_display_detail.css
@@ -12,7 +12,7 @@
 	color: black;
 	font-size: 14px;
 	text-align: left;
-	direction: ltr;
+	direction: rtl;
 	display: inline-block;
 	position: absolute; left: 0px; top: 0px;
 }
