--- a/components/pgShop/pgShop_user_form.css
+++ b/components/pgShop/pgShop_user_form.css
@@ -1,6 +1,6 @@
 
 .pgShop_user_form {
-	margin-bottom: 80px;
+	margin: 40px 0 80px 0;
 }
 .pgShop_user_form .head {
     line-height: 50px !important;
