--- a/components/userpanel-4/userpanel_desk.css
+++ b/components/userpanel-4/userpanel_desk.css
@@ -11,11 +11,10 @@
 .userpanel_desk {
 	display: inline-block;
 	border-width: 0 1px 0 0;
-	width: calc( 100% - 177px );
+	width: 100%;
 	background-color: white;
 	border-radius: 5px;
 	vertical-align: top;
-	margin-right: 10px;
 	overflow: hidden;
 }
 
