--- a/components/userpanel-4/userpanel_menu.css
+++ b/components/userpanel-4/userpanel_menu.css
@@ -1,22 +1,18 @@
 
 .userpanel_menu {
 	display: inline-block;
-	width: 162px;
+	width: 100%;
 	direction: rtl;
 	background-color: white;
-	/*border: 1px solid #d9d9d9;*/
 	margin-bottom: 20px;
 	border-radius: 4px;
-
-	/*display: none;*/
 	opacity: 0.0;
 }
 
 /*avatar*/
 .userpanel_menu .profile_avatar {
-	/*margin-bottom: 5px !important;*/
-	width: 162px;
-	max-height: 200px;
+	width: 100%;
+	max-height: 400px;
 	overflow: hidden;
 	display: inline-block;
 }
@@ -24,7 +20,7 @@
 	border-radius: 4px 4px 0 0;
 	border: 1px solid #d9d9d9;
     border-right: 3px solid gray;
-    width: 162px;
+    width: 100%;
     height: auto;
 }
 
@@ -56,7 +52,6 @@
     font: normal 20px FontAwesome;
     padding: 0;
     margin: 0 0 0 10px !important;
-    /*border-left: 1px solid #ededed;*/
     border-bottom: 1px solid white;
 	content: "\f015";
 }
@@ -69,7 +64,7 @@
     border-bottom: 1px solid #000;	
 }
 .userpanel_menu > div > a > span {
-	position: absolute; top: 11px; right: 50px;
+	position: absolute; top: 11px; right: 53px;
 	line-height: 1.5 !important;
 }
 
