--- a/components/userprofile-1/userprofile_form.css
+++ b/components/userprofile-1/userprofile_form.css
@@ -1,17 +1,18 @@
 
-
 .userprofile_form {
 	margin: auto;
 	display: block;
-	padding-right: 8%;
-	padding: 7%;
-	padding-bottom: 10%;
+	padding: 4% 7% 10% 7%;
 	/*background-color: white;*/
 	/*border-radius: 4px;*/
 	/*box-shadow: 0 0 10px #ccc;*/
 }
 .userprofile_form * {
 	font-size: 13px !important;
+}
+.userprofile_form .lmfetfp .open ,
+.userprofile_form .lmfetfp .remove {
+	font-size: 10px !important;
 }
 .userprofile_form > div {
 	margin: 5px 0;
@@ -50,21 +51,18 @@
 	width: auto !important;
 }
 
-
 .userprofile_form input[name="username"] ,
 .userprofile_form input[name="tell"] ,
 .userprofile_form input[name="cell"] {
 	direction: ltr;
 }
 
-
-
-
 .userprofile_form_head {
 	border-bottom: 1px dashed #ddd;
     font-weight: bold;
     font-size: 24px;
-    margin: 30px 30px 30px 0;
+    margin: 30px;
+    margin-bottom: 50px;
     padding: 0 0 20px 0;
 }
 
