--- a/components/userprofile-1/userprofile_vw.template.htm
+++ b/components/userprofile-1/userprofile_vw.template.htm
@@ -7,9 +7,9 @@
 		<div class="name"><span>&nbsp;</span>{name}</div>
 		<div class="im_a"><span class="clSameAsBG">{lmtc("users:im_a")}</span>{im_a}</div>
 		<div class="work_at"><span class="clSameAsBG">{lmtc("users:work_at")}</span>{work_at}</div>
-		<div class="tell"><span class="clSameAsBG">{lmtc("users:tell")}</span>{tell}</div>
 		<div class="cell"><span class="clSameAsBG">{lmtc("users:cell")}</span>{cell}</div>
-		<div class="email"><span class="clSameAsBG">{lmtc("users:username")}</span><img src="{photools_email_gif($_REQUEST["id"])}"/></div>
+		<div class="tell"><span class="clSameAsBG">{lmtc("users:tell")}</span>{tell}</div>
+		<div class="email"><span class="clSameAsBG">{lmtc("users:username")}</span><img src="{emailgif($_REQUEST["id"])}"/></div>
 		<div><span></span></div>
 	</div>
 	
