--- a/components/users-1/users_changepassword_form.css
+++ b/components/users-1/users_changepassword_form.css
@@ -3,23 +3,24 @@
 #users_changepassword_form {
 	margin: auto;
 	display: block;
-	margin-right: 150px;
+	/* margin-right: 150px; */
 	margin-bottom: 100px;
 	direction: rtl;
 }
 #users_changepassword_form .container {
-	margin: 40px 0 0 100px;
-	width: 80% !important;
+	/* margin: 40px 0 0 100px; */
+	width: 90% !important;
+	margin: auto;
 }
 #users_changepassword_form input {
 	direction: ltr;
 	display: inline-block;
-	font: normal 16px Tahoma;
-	padding: 10px;
+	font: normal 13px Tahoma;
+	/* padding: 10px; */
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	margin: 5px 0 5px 0;
-	width: 350px;
+	width: 200px;
 }
 #users_changepassword_form input[type=submit] {
 	/* background: rgb(86, 86, 86); */
@@ -29,15 +30,18 @@
 }
 
 #users_changepassword_form .container div span {
-	width: 120px;
+	width: 200px;
 	display: inline-block;
-	/* text-align: left; */
+	text-align: left;
+	padding-left: 30px;
 }
 
 #users_changepassword_form .d01 {
-	margin: 30px 0 40px 0;
-	font: bold 30px Tahoma;
-	color: #666;
+	border-bottom: 1px dashed #ddd;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 30px auto 50px auto;
+    padding: 0 0 20px 0;
 }
 #users_changepassword_form .d02 {
 	 margin: 50px 3px 20px 0;
