--- a/templates/Default/css/layout-post.css
+++ b/templates/Default/css/layout-post.css
@@ -13,12 +13,21 @@
 }
 .layout-post > .header {
 	color: #000;
-	padding: 15px 20px 15px 20px;
+	padding: 20px 20px 20px 20px;
 	font-size: 13px;
 	font-weight: bold;
 	cursor: default;
-	border-bottom: 1px dashed #ddd;
+	/* border-bottom: 1px dashed #ddd; */
 }
+.layout-post > .header:after {
+	content: " ";
+	height: 2px;
+	border-bottom: 2px solid #d9d9d9;
+	display: block;
+	margin-top: 15px;
+	margin-bottom: -15px;
+}
+
 .layout-post > .content {
 	padding: 7px 10px 10px 10px;
 	color: #333;
