fix links in header and footer, on tag page. _URL

--- a/templates/Default/template/footer.template.htm
+++ b/templates/Default/template/footer.template.htm
@@ -9,38 +9,38 @@
 			<div class="linkbox">
 				<div class="head">{tiny_title}</div>
 				<div class="links">
-					<a href="./blog">وبلاگ</a>
-					<a href="./about">درباره {tiny_title}</a>
-					<a href="./press">{tiny_title} در اخبار</a>
-					<a href="./learn">{tiny_title} چگونه کار میکند</a>
+					<a href="{_URL}/blog">وبلاگ</a>
+					<a href="{_URL}/about">درباره {tiny_title}</a>
+					<a href="{_URL}/press">{tiny_title} در اخبار</a>
+					<a href="{_URL}/learn">{tiny_title} چگونه کار میکند</a>
 				</div>
 			</div>
 
 			<div class="linkbox">
 				<div class="head">ارتباط بیشتر</div>
 				<div class="links">
-					<a href="./contact">تماس با ما</a>
-					<a href="./agent">دریافت نمایندگی</a>
-					<a href="./business">{tiny_title} برای کسب کار شما</a>
+					<a href="{_URL}/contact">تماس با ما</a>
+					<a href="{_URL}/agent">دریافت نمایندگی</a>
+					<a href="{_URL}/business">{tiny_title} برای کسب کار شما</a>
 				</div>
 			</div>
 
 			<div class="linkbox">
 				<div class="head">بیشتر بدانید</div>
 				<div class="links">
-					<a href="./sitemap.xml">سایت مپ {tiny_title}</a>
-					<a href="./rss/post.xml">آر اس اس {tiny_title}</a>
-					<a href="./rss/news.xml">آر اس اس اخبار</a>
+					<a href="{_URL}/sitemap.xml">سایت مپ {tiny_title}</a>
+					<a href="{_URL}/rss/post.xml">آر اس اس {tiny_title}</a>
+					<a href="{_URL}/rss/news.xml">آر اس اس اخبار</a>
 				</div>
 			</div>
 
 			<div class="linkbox">
 				<div class="head">سایر خدمات</div>
 				<div class="links">
-					<a href="./support">تماس با واحد پشتیبانی</a>
-					<a href="./?page=55">امور مشتریان</a>
-					<a href="./online-payment">راهنمای پرداخت آنلاین</a>
-					<a href="./faq">سوالات متداول</a>
+					<a href="{_URL}/support">تماس با واحد پشتیبانی</a>
+					<a href="{_URL}/?page=55">امور مشتریان</a>
+					<a href="{_URL}/online-payment">راهنمای پرداخت آنلاین</a>
+					<a href="{_URL}/faq">سوالات متداول</a>
 				</div>
 			</div>
 
