--- a/templates/Default/template/header.template.htm
+++ b/templates/Default/template/header.template.htm
@@ -7,8 +7,8 @@
 		
 		{pgSearch_form}
 
-		<a href="./new_item" class="new_ads">ارسال آگهی رایگان</a>
-		<a href="./login" class="login_or_register">ورود / عضویت</a>
+		<a href="{_URL}/new_item" class="new_ads">ارسال آگهی رایگان</a>
+		<a href="{_URL}/login" class="login_or_register">ورود / عضویت</a>
 
 		{breadcrumb}
 
