--- a/components/contact-3/contact.template.htm
+++ b/components/contact-3/contact.template.htm
@@ -1,5 +1,4 @@
 
-
 <div class="contact_vw_form">
 	
 	<div class="path">
@@ -9,22 +8,25 @@
 	</div>
 
 	<form method="post" action="./?page={page}&do=send" >
+	{token}
+
 	<fieldset>
 		<legend>
 		<select name="to">
-			<option value="">ارتباط با ..</option>
+			<option value="0">ارتباط با ..</option>
 			{email_select_option}
 		</select>
 		</legend>
 		<img src="http://parsunix.com/cdn/img/contact.jpg" class="handshaking" />
 		<div class="right">
 		<input placeholder="نام" type="text" name="name" value="{name}">
-		<input placeholder="تلفن" type="text" class="numeric" name="cell_number" value="{cell_number}">
-		<input placeholder="ایمیل" type="email" name="email_address" value="{email_address}">
+		<input placeholder="تلفن" type="text" class="numeric" name="cell" value="{cell}">
+		<input placeholder="ایمیل" type="email" name="email" value="{email}">
 		<textarea placeholder="متن پیام ..." name="content" >{content}</textarea>
 		<input type="submit" value="ارسال" class="submit_button" >
 		</div>
 	</fieldset>
+	
 	</form>
 
 </div>
