--- a/components/contact-3/contact_mg_form.css
+++ b/components/contact-3/contact_mg_form.css
@@ -53,12 +53,12 @@
 	margin: 5px 0;
 }
 .contact_mg_form .detail > div > div {
-	direction: ltr;
+	/* direction: ltr; */
 	display: inline-block;
 }
 .contact_mg_form .detail > div > span {
-	text-align: left;
-	width: 40px;
+	/* text-align: left; */
+	width: 38px;
 	color: #aaa;
 	font-size: 9px;
 	display: inline-block;
