--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -11,7 +11,7 @@
 
 	<link rel="shortcut icon" href="{_URL}/templates/{_THEME}/images/favicon.ico" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="canonical" href="{_URL}{_URI}" />
+	{canonical_tag}
 	
 	<link rel="stylesheet" href="{_URL}/modules/font-awesome-4.6.1/css/font-awesome.min.css">
 	<link href="{_URL}/templates/{_THEME}/font/font.css" rel="stylesheet" type="text/css">
