--- a/components/listmaker-2/listmaker_list.css
+++ b/components/listmaker-2/listmaker_list.css
@@ -1,5 +1,5 @@
 
-/*2016/07/30*/
+/*2016/09/26*/
 
 .listmaker_list {
 	direction:rtl;
@@ -200,10 +200,11 @@
 }
 
 .listmaker_list_search {
-	margin: 10px 0 -5px 0;
+	margin: 10px 0 -49px 0;
 	display: block;
 	text-align: right;
 	direction: rtl;
+	position: relative; z-index: 2;
 }
 .listmaker_list_search input {
 	width: 140px !important;
