--- a/components/catcustomfield-1/catcustomfield_formload.css
+++ b/components/catcustomfield-1/catcustomfield_formload.css
@@ -8,6 +8,8 @@
 	border-radius: 0 0 8px 8px;
 	background-color: #f8f8f8;
 	border-radius: 8px;
+	margin-top: 20px;
+    padding-top: 2px;
 }
 .catcustomfield_formload > .ccffe_thisCat > .head {
 	padding: 10px;
@@ -24,10 +26,10 @@
 }
 
 .catcustomfield_formload > .ccffe_thisCat .element_name {
-	width: 150px;
-	text-align: left;
-	direction: rtl;
-	display: inline-block;
+	/* width: 150px; */
+	/* text-align: left; */
+	/* direction: rtl; */
+	/* display: inline-block; */
 	vertical-align: middle;
 	padding-left: 10px;
 	color: #777;
@@ -41,12 +43,33 @@
 	margin: 6px 0 6px 20px;
     display: inline-block;
 }
+.catcustomfield_formload > .ccffe_thisCat label.label {
+	margin-bottom: -5px;
+	padding-bottom: 0px;
+}
+.catcustomfield_formload > .ccffe_thisCat .radio_c > label {
+	margin: 0 0 10px 10px;
+    display: inline-block;
+    background-color: #fff;
+    padding: 2px 10px 1px 10px;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.14);
+}
+.catcustomfield_formload > .ccffe_thisCat .radio_c > label:active {
+
+}
 .catcustomfield_formload > .ccffe_thisCat label span {
 	display: inline-block;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .catcustomfield_formload > .ccffe_thisCat .radio_c {
 	display: inline-block;
-    width: calc( 100% - 200px );
+    width: calc( 100% - 170px );
 }
 
 .catcustomfield_formload > .ccffe_thisCat textarea {
@@ -57,6 +80,22 @@
 	margin-left: 5px;
 	margin-right: 3px;
 }
+
+.catcustomfield_formload hr.ccfhr {
+	margin-left: 20px;
+	margin-right: 20px;	
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
