--- a/components/catcustomfield-1/catcustomfield_formload.css
+++ b/components/catcustomfield-1/catcustomfield_formload.css
@@ -39,13 +39,15 @@
     padding-top: 3px;
 }
 
+.catcustomfield_formload > .ccffe_thisCat div ,
 .catcustomfield_formload > .ccffe_thisCat label {
 	margin: 6px 0 6px 20px;
-    display: inline-block;
+    display: block;
 }
 .catcustomfield_formload > .ccffe_thisCat label.label {
 	margin-bottom: -5px;
 	padding-bottom: 0px;
+	/* display: block; */
 }
 .catcustomfield_formload > .ccffe_thisCat .radio_c > label {
 	margin: 0 0 10px 10px;
@@ -69,7 +71,7 @@
 }
 .catcustomfield_formload > .ccffe_thisCat .radio_c {
 	display: inline-block;
-    width: calc( 100% - 170px );
+    width: calc( 100% - 180px );
 }
 
 .catcustomfield_formload > .ccffe_thisCat textarea {
@@ -88,8 +90,12 @@
 
 
 
-
-
+.ccf_checkbox_w {
+	display: inline-block !important;
+}
+.ccf_checkbox_w label.checkbox {
+	display: inline-block;
+}
 
 
 
