--- a/components/listmaker_form-1/listmaker_form_element_this_catbox.css
+++ b/components/listmaker_form-1/listmaker_form_element_this_catbox.css
@@ -2,6 +2,7 @@
 div.catjson_hitbox_c {
 	display: block;
 	padding: 20px;
+	direction: rtl;
 }
 div.catjson_hitbox_c span.head {
 	display: block;
@@ -29,6 +30,22 @@ div.catjson_hitbox_c span.head .up:after {
 	padding: 0 15px 0 0;
 	margin-left: 10px;
 	color: #666;
+}
+
+div.catjson_hitbox_c span.head span.the_save_button {
+    position: absolute;
+    left: 22px;
+    top: 14px;
+}
+div.catjson_hitbox_c span.head span.the_save_button:before {
+	content: "\f0c7";
+    font-family: FontAwesome;
+    font-size: 24px;
+    cursor: pointer;
+    color: #999;
+}
+div.catjson_hitbox_c span.head span.the_save_button:hover:before {
+	color: #333;
 }
 
 div.catjson_hitbox_c > span.r {
