--- a/components/listmaker_form-1/listmaker_form_element_this_positionbox.css
+++ b/components/listmaker_form-1/listmaker_form_element_this_positionbox.css
@@ -32,6 +32,22 @@ div.positionjson_hitbox_c span.head .up:after {
 	color: #666;
 }
 
+div.positionjson_hitbox_c span.head span.the_save_button {
+    position: absolute;
+    left: 22px;
+    top: 14px;
+}
+div.positionjson_hitbox_c span.head span.the_save_button:before {
+	content: "\f0c7";
+    font-family: FontAwesome;
+    font-size: 24px;
+    cursor: pointer;
+    color: #999;
+}
+div.positionjson_hitbox_c span.head span.the_save_button:hover:before {
+	color: #333;
+}
+
 div.positionjson_hitbox_c > span.r {
 	display: inline-block;
 	width: 49%;
