--- a/components/hitbox-2/hitbox.css
+++ b/components/hitbox-2/hitbox.css
@@ -1,5 +1,5 @@
 
-/*2016/10/16*/
+/*2016/10/22*/
 
 #hitbox-container {
 	display: none;
@@ -16,9 +16,9 @@
 #hitbox-text {
 	transition: all 0.3s;
 	/* display: inline-block; */
-	overflow: scroll;
+	overflow: hidden;
 	background: white;
-	width: 0px;
+	width: 100%;
 	height: 0px;
 	margin: auto;
 	box-shadow:0px 0px 40px rgba(0,0,0, 0.4);
