--- a/components/listmaker_form-1/listmaker_form_element_this_catbox.css
+++ b/components/listmaker_form-1/listmaker_form_element_this_catbox.css
@@ -89,7 +89,10 @@ div.catjson_hitbox_c > span.r:hover {
 	border: 1px solid #f0f0f0;
 }
 
-
+.lmfe_catbox_c_hitbox {
+	overflow-x: hidden !important;
+	overflow-y: scroll !important;
+}
 
 
 
