--- a/components/breadcrumb-1/breadcrumb.css
+++ b/components/breadcrumb-1/breadcrumb.css
@@ -7,6 +7,7 @@
 	color: #9d9d9d !important;
 	font-size: 11px !important;
 	line-height: 1 !important;
+	display: inline-block;
 }
 
 .breadcrumb a:before {
