--- a/components/pgSearch/pgSearch_item_list.css
+++ b/components/pgSearch/pgSearch_item_list.css
@@ -13,6 +13,9 @@
     margin: 0;
     padding: 17px 20px 15px 20px
 }
+.pgSearch_item_list .head > .title {
+	display: inline-block;
+}
 .pgSearch_item_list .subcat {
 	background-color: #ddd;
 	border-radius: 5px;
@@ -22,6 +25,9 @@
 	color: royalblue;
 	display: inline-block;
 	margin: 10px;
+}
+.pgSearch_item_list .subcat > a > .title {
+	display: inline-block;
 }
 .pgSearch_item_list .subcat > a:hover {
 	color: blue;
