--- a/components/main-3/convbox.css
+++ b/components/main-3/convbox.css
@@ -1,4 +1,6 @@
 
+/*2016/10/23*/
+
 .convbox {
 	margin: 20px;
 	padding: 45px 55px;
@@ -11,7 +13,18 @@
 	border-radius: 10px;
 	direction: rtl;
 	box-sizing: border-box;
-	/* text-align: center; */
+}
+.convbox.transparent {
+	background-color: transparent;
+	border: 0px;
+}
+.convbox.green {
+	background-color: #eeffe8;
+	color: #567f33;
+}
+.convbox.red {
+	background-color: #fff0e8;
+	color: #7f3333;
 }
 .convbox a {
 	color: blue;
