template for settleInvoice_prompt

--- a/components/billing-4/billing_settleInvoice.template.htm
+++ b/components/billing-4/billing_settleInvoice.template.htm
@@ -1,5 +1,19 @@
 
-<hr>
-{prompt}
-<hr>
+<style>
+	#settleInvoice_prompt {
+		padding: 40px;
+	}
+	#settleInvoice_prompt > span {
+		width: 400px;
+		display: inline-block;
+	}
+	#settleInvoice_prompt > img {
+		width: 300px;
+	}
+</style>
+
+<div id="settleInvoice_prompt">
+	<span>{prompt}</span>
+	<img src="{billing_settleInvoice.png}" style="float: left;" />
+</div>
 
