--- a/components/billing-4/billing_settleInvoice.template.htm
+++ b/components/billing-4/billing_settleInvoice.template.htm
@@ -1,19 +1,26 @@
 
 <style>
 	#settleInvoice_prompt {
-		padding: 40px;
+		padding: 60px 100px;
+		vertical-align: top;
+		float: left;
+		width: 100%;
 	}
 	#settleInvoice_prompt > span {
-		width: 400px;
+		width: 350px;
 		display: inline-block;
+		vertical-align: top;
+		font-size: 16px;
+		padding: 20px 0;
 	}
 	#settleInvoice_prompt > img {
-		width: 300px;
+		width: 200px;
+		float: left;
 	}
 </style>
 
 <div id="settleInvoice_prompt">
 	<span>{prompt}</span>
-	<img src="{billing_settleInvoice.png}" style="float: left;" />
+	<img src="{billing_settleInvoice.png}" />
 </div>
 
