--- a/templates/Default/template/footer.template.htm
+++ b/templates/Default/template/footer.template.htm
@@ -1,76 +1,7 @@
-
+﻿
 <div class="clear"></div>
 
-<div id="footer">
-	
-	<div class="light">
-		<div class="top">
-			
-			<div class="linkbox">
-				<div class="head">{tiny_title}</div>
-				<div class="links">
-					<a href="{_URL}/blog">وبلاگ</a>
-					<a href="{_URL}/about">درباره {tiny_title}</a>
-					<a href="{_URL}/press">{tiny_title} در اخبار</a>
-					<a href="{_URL}/learn">{tiny_title} چگونه کار میکند</a>
-				</div>
-			</div>
-
-			<div class="linkbox">
-				<div class="head">ارتباط بیشتر</div>
-				<div class="links">
-					<a href="{_URL}/contact">تماس با ما</a>
-					<a href="{_URL}/agent">دریافت نمایندگی</a>
-					<a href="{_URL}/business">{tiny_title} برای کسب کار شما</a>
-				</div>
-			</div>
-
-			<div class="linkbox">
-				<div class="head">بیشتر بدانید</div>
-				<div class="links">
-					<a href="{_URL}/sitemap.xml">سایت مپ {tiny_title}</a>
-					<a href="{_URL}/rss/post.xml">آر اس اس {tiny_title}</a>
-					<a href="{_URL}/rss/news.xml">آر اس اس اخبار</a>
-				</div>
-			</div>
-
-			<div class="linkbox">
-				<div class="head">سایر خدمات</div>
-				<div class="links">
-					<a href="{_URL}/support">تماس با واحد پشتیبانی</a>
-					<a href="{_URL}/?page=55">امور مشتریان</a>
-					<a href="{_URL}/online-payment">راهنمای پرداخت آنلاین</a>
-					<a href="{_URL}/faq">سوالات متداول</a>
-				</div>
-			</div>
-
-		</div>
-		
-		
-	</div>
-	
-	<div class="dark">
-		<div class="right">
-			<div class="rights">{html_footer_copyright}</div>
-			<div class="links">
-				<a href="./terms">قوانین و مقرارت {tiny_title}</a>
-				<a href="./privacy">ضوابط حفظ حریم خصوصی</a>
-			</div>
-		</div>
-		<div class="left">
-			<div class="ft-phone ltr"><span>{cu_company_tell}</span></div>
-			<ul class="socials">
-				<li><a href="https://www.facebook.com/postgah" class="scl-icon color-facebook" title="فیس‌بوک" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-				<li><a href="https://twitter.com/postgah" class="scl-icon color-twitter" title="توییتر" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-				<li><a href="https://plus.google.com/+postgah/posts" class="scl-icon color-google" title="گوگل پلاس" target="_blank"><i class="fa fa-google-plus-square"></i></a></li>
-				<li><a href="http://www.linkedin.com/company/postgah" class="scl-icon color-linkedin" title="لینکدین" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-				<li><a href="http://instagram.com/mypostgah" class="scl-icon color-instagram" title="اینستاگرام" target="_blank"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://www.pinterest.com/postgah/" class="scl-icon color-pinterest" title="پینترست" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
-				<li><a href="https://www.youtube.com/user/postgah" class="scl-icon color-youtube" title="یوتیوب" target="_blank"><i class="fa fa-youtube"></i></a></li>
-			</ul>
-		</div>
-	</div>
-</div>
+{tallfooter()}
 
 <div class="footer-copyright">
 	powered by <a href="http://parsunix.com" target="_blank">parsunix</a>
