--- a/components/pgPlan_user/pgPlan_user_getPlansForThisCat.css
+++ b/components/pgPlan_user/pgPlan_user_getPlansForThisCat.css
@@ -26,6 +26,8 @@
     border-radius: 5px 5px 0 0;
     margin: -4px -8px 4px -8px;
     padding: 10px 15px;
+
+    display: none;
 }
 .ppugpftc .this_plan a.sample_page {
     color: white;
