--- a/components/pgItem_display/enamad.css
+++ b/components/pgItem_display/enamad.css
@@ -1,6 +1,6 @@
 
 #footer_validation_links {
-	padding: 10px;
+	padding: 25px 10px;
 	background-color: #999;
 	border-radius: 2px;
 	box-shadow: 0 0 10px #000;
