--- a/components/social-1/tallfooter_social.css
+++ b/components/social-1/tallfooter_social.css
@@ -22,3 +22,23 @@ ul.tallfooter_social > li > a:hover {
 	color: rgb(169,0,0);
 }
 
+ul.tallfooter_social .social-aparat {
+    background-image: url(image_list/aparat-logo-gray.png);
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-size: 30px 30px;
+    position: relative;
+    top: 5px;
+    transition: 0.2s all;
+}
+ul.tallfooter_social .social-aparat:hover {
+    background-image: url(image_list/aparat-logo-red.png);
+}
+
+
+
+
+
+
+
