--- a/components/billing-4/billing_mg_methods.css
+++ b/components/billing-4/billing_mg_methods.css
@@ -6,27 +6,34 @@
 	margin: 20px 0 0 0;
 }
 .billing_management_methods .r {
-	border: 1px solid #eee;
-	box-shadow: 0 0 20px #f4f4f4 inset;
+	/* border: 1px solid #eee; */
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
 	margin: 10px 0 10px 0;
 	width: 100%;
-	height: 80px;
+	/* height: 80px; */
 	position: relative;
 	background: white;
+	/* vertical-align: middle; */
+	padding: 20px;
+	border-radius: 3px;
 }
 .billing_management_methods .r > *{
 	vertical-align: middle;
 }
 .billing_management_methods .r img {
-	position: absolute; right: 30px; top: 20px;
+	/* position: absolute; right: 30px; top: 20px; */
+	padding-left: 20px;
 	width: 120px;
 }
 .billing_management_methods .r span {
 	font-size: 16px;
-	position: relative; top: 29px;
+	/* position: relative; top: 29px; */
 }
 .billing_management_methods .r .input-box {
-	position: absolute; left: 15px; top: 15px;
+	/* position: absolute; left: 15px; top: 15px; */
+	display: inline-block;
+    float: left;
+    margin: -8px;
 }
 .billing_management_methods .r input[type=button] {
 	padding: 12px 24px 12px 24px;
