--- a/components/main-3/main-common.css
+++ b/components/main-3/main-common.css
@@ -183,7 +183,7 @@ select {
 	width: auto;
 	text-align: center;
 	cursor: pointer;
-
+	text-shadow: 0 0 3px rgba(0,0,0,0.3);
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-khtml-user-select: none;
@@ -192,6 +192,9 @@ select {
 }
 .submit_button:hover {
 	opacity: 0.8;
+}
+.submit_button.red {
+	background-color: rgb(255, 71, 0);
 }
 
 .divider {
