--- a/components/fbcomment-1/fbcomment.css
+++ b/components/fbcomment-1/fbcomment.css
@@ -1,19 +1,19 @@
 
-.fbcm_container {
+.fbcomment_container {
 	width: 80%;
 	margin: auto;
 }
-.fbcm_container > #fbcm_temp {
+.fbcomment_container > #fbcomment_temp {
 	/*display: none;*/
 }
 
-.fbcm {
+.fbcomment {
 	width: 100%;
 	/*height: 500px;*/
 	margin: 20px 0 40px 0;
 }
 
-.fbcm_sharp_anchor {
+.fbcomment_sharp_anchor {
 	width: 1px; 
 	height: 1px;
 	overflow: hidden;
