--- a/components/fbcomment-1/fbcomment_form.css
+++ b/components/fbcomment-1/fbcomment_form.css
@@ -1,19 +1,19 @@
 
-.fbcm form.form {
+.fbcomment form.form {
 	padding: 15px;
 	background-color: #f9f9f9;
 	border-radius: 6px;
 	border: 1px solid #f1f1f1;
 	position: relative;
 }
-.fbcm form.form > img {
+.fbcomment form.form > img {
 	border-radius: 40px;
 	width: 40px;
 	height: 40px;
 	display: inline-block;
 	margin: 0 3px -10px 13px;
 }
-.fbcm form.form > input[type="text"] {
+.fbcomment form.form > input[type="text"] {
 	display: inline-block;
 	padding: 10px 10px 10px 60px;
 	border: 1px solid #f1f1f1;
@@ -25,7 +25,7 @@
 	margin: 0 10px 0 0;
 }
 
-.fbcm form.form > input[type="submit"] {
+.fbcomment form.form > input[type="submit"] {
 	position: absolute;
     left: 21px;
     top: 21px;
@@ -40,7 +40,7 @@
     line-height: 1.5 !important;
 }
 
-.fbcm_form_login_request {
+.fbcomment_form_login_request {
 	background-color: #f8f8f8;
 	color: #aaa;
 	font: normal 12px DefaultFont;
