--- a/components/user-1/user_login_form.css
+++ b/components/user-1/user_login_form.css
@@ -1,17 +1,17 @@
 
 /*-spi-*/
 
-#users_login_form {
+#user_login_form {
 	margin: auto;
 	display: block;
 }
-#users_login_form .container {
+#user_login_form .container {
 	margin: 4% 15%;
 }
-#users_login_form .the_key {
+#user_login_form .the_key {
 	display: none;
 }
-#users_login_form input {
+#user_login_form input {
 	direction: ltr;
 	display: block;
 	font: normal 16px monospace,tahoma;
@@ -22,30 +22,30 @@
 	width: 450px;
 	max-width: 95%;
 }
-#users_login_form input[type="submit"] {
+#user_login_form input[type="submit"] {
 	width: auto;
 	padding: 10px 20px;
 }
-#users_login_form .d01 {
+#user_login_form .d01 {
 	margin: 0 0 40px 0;
 	font: bold 32px tahoma;
 	color: #666;
 }
-#users_login_form .d03 {
+#user_login_form .d03 {
 	font: normal 10px tahoma;
 	margin: 0px 2px 20px 0;
 }
-#users_login_form .d04 {
+#user_login_form .d04 {
 	font: normal 10px tahoma;
 	display: block;
 	margin: 15px 2px 0 0;
 	width: 140px;
 }
-#users_login_form .d05 {
+#user_login_form .d05 {
 	font: normal 10px tahoma;
 }
 
-#users_login_form .prompt {
+#user_login_form .prompt {
 	color: red;
 	margin: -5px 0 15px 0;
 }
