ticketbox in admin, abusereport latest version.

--- a/components/ticketbox-1/ticketbox_mg_list.css
+++ b/components/ticketbox-1/ticketbox_mg_list.css
@@ -35,8 +35,11 @@
 	content: "\f0c5";
 }
 
-
-
+.ticketbox_mg_list tr td:nth-child(2) {
+	width: 100px;
+	text-align: center;
+	font-size: 10px;
+}
 
 
 
