--- a/components/ticketbox-1/ticketbox_view_post.css
+++ b/components/ticketbox-1/ticketbox_view_post.css
@@ -1,12 +1,12 @@
 
-.ticketbox_mg_view .post {
+.ticketbox_view .post {
 	box-shadow: 0 0 15px rgba(0,0,0,0.05);
 	background-color: rgba(255,255,255,0.9);
 	border-radius: 4px;
 	margin: 20px 0;
 	position: relative;
 }
-.ticketbox_mg_view .post .info {
+.ticketbox_view .post .info {
 	display: inline-block;
 	width: 180px;
 	background-color: #f6f6f6;
@@ -15,24 +15,24 @@
 	padding: 30px 0;
 	vertical-align: middle;
 }
-.ticketbox_mg_view .post .info .useravatar {
+.ticketbox_view .post .info .useravatar {
 	padding-bottom: 5px;
 }
-.ticketbox_mg_view .post .info .useravatar img {
+.ticketbox_view .post .info .useravatar img {
 	width: auto;
 	height: 70px;
 	max-width: 150px;
 }
-.ticketbox_mg_view .post .info .user {
+.ticketbox_view .post .info .user {
 	padding-bottom: 15px;
 	font-size: 9px;
 }
-.ticketbox_mg_view .post .info .date {
+.ticketbox_view .post .info .date {
 	font-size: 8px;
 	margin-bottom: -15px;
 	color: #aaa;
 }
-.ticketbox_mg_view .post .text {
+.ticketbox_view .post .text {
 	vertical-align: top;
 	display: inline-block;
 	width: calc( 100% - 180px );
@@ -40,10 +40,10 @@
 	font-size: 12px;
 }
 
-.ticketbox_mg_view .post .remove {
+.ticketbox_view .post .remove {
 	transition: all 0.3s;
 }
-.ticketbox_mg_view .post .remove:before {
+.ticketbox_view .post .remove:before {
 	position: absolute; left: -34px; top: -34px;
 	color: red;
 	font-family: FontAwesome;
@@ -53,10 +53,10 @@
 	padding: 30px;
 	transition: 0.2s all;
 }
-.ticketbox_mg_view .post:hover .remove:before {
+.ticketbox_view .post:hover .remove:before {
 	display: inline-block;
 }
-.ticketbox_mg_view .post .remove:hover:before {
+.ticketbox_view .post .remove:hover:before {
 	/* color: orangered; */
 	font-size: 18px;
 	cursor: pointer;
