--- a/components/pgItem_display/pgItem_display_text.css
+++ b/components/pgItem_display/pgItem_display_text.css
@@ -42,5 +42,10 @@
 }
 .pgItem_display_text .text_footer .ask_from_seller {
 	position: absolute; left: 0px; bottom: -10px;
-	background-color: #2095f4 !important;
+	background-color: #2095f4;
+	cursor: pointer;
 }
+.pgItem_display_text .text_footer .ask_from_seller.gray {
+	background-color: gray !important;
+}
+
