--- a/components/ticketbox-1/ticketbox_user_form.css
+++ b/components/ticketbox-1/ticketbox_user_form.css
@@ -1,4 +1,6 @@
 
+/* -spi- */
+
 .ticketbox_user_form {
 	padding: 30px 0px;
 }
@@ -16,4 +18,8 @@
 #lmfe_ticketbox_user_form_text {
 	width: 75%;
 	height: 200px;
+}
+
+#lmfe_ticketbox_user_form_user_name_memo {
+	width: 75%;
 }
