--- a/components/ticketbox-1/ticketbox_view_form.css
+++ b/components/ticketbox-1/ticketbox_view_form.css
@@ -24,4 +24,17 @@
 	opacity: 0.0;
 	transition: all 0.3s;
 }
+.ticketbox_view form .submit_div {
+	position: relative;
+}
+.ticketbox_view form .foreign {
+	position: absolute; left: 5px; bottom: 10px;
+	font-size: 15px;
+    opacity: 0.7;
+    display: block;
+}
+
+
+
+
 
