--- a/components/texty-4/texty_mg_form.css
+++ b/components/texty-4/texty_mg_form.css
@@ -19,7 +19,7 @@
 }
 .texty_mg_form textarea {
 	width: 100%;
-	height: 220px;
+	height: 200px;
 	font-size: 12px;
 }
 
@@ -41,6 +41,26 @@
 	margin: 0px 30px 50px 0;
 }
 
-
+.texty_mg_form span.vars {
+	float: left;
+	margin-left: 30px;
+	text-align: left;
+}
+.texty_mg_form span.vars > div {
+	margin: 0 0 10px 0;
+	font-size: 10px;
+}
+.texty_mg_form span.vars > span {
+	background-color: white;
+	border-radius: 6px;
+	background-color: white;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+	padding: 4px 8px;
+	font-family: Raleway;
+}
+.texty_mg_form span.vars > span:hover {
+	color: white;
+	background-color: black;
+}
 
 
