--- a/components/main.admin-3/admin_changepassword.css
+++ b/components/main.admin-3/admin_changepassword.css
@@ -1,9 +1,10 @@
 
 .admin_changepassword {
 	padding: 0px 70px;
+	/* transform: rotate( 20deg ); */
 }
 .admin_changepassword .head {
-	padding: 40px 0 30px 0;
+	padding: 35px 0 20px 0;
 	font-size: 16px;
 }
 .admin_changepassword .lmfe_tnit {
@@ -13,6 +14,8 @@
 .admin_changepassword .lmfe_inDiv.submit {
 	background-color: #f1f1f1;
 	margin: -10px -70px 0 -70px;
-    padding: 40px 0 60px 0;
+    padding: 30px 0 33px 0;
 }
-
+.admin_changepassword .lmfe_inDiv.submit input {
+	position: relative; right: 68px;	
+}
