red title on user ticket list for new ones.

--- a/components/ticketbox-1/ticketbox_user_list.css
+++ b/components/ticketbox-1/ticketbox_user_list.css
@@ -7,7 +7,7 @@
 	position: relative;
 }
 .ticketbox_user_list tr.new td:first-child {
-	color: black;
+	color: #a00;
 	font-weight: bold;
 }
 
@@ -23,7 +23,7 @@
 }
 .ticketbox_user_list tr.new td:first-child:before {
 	content: "\f0e0";
-	color: black;
+	color: #a00;
 }
 .ticketbox_user_list tr.notnew td:first-child {
 	
