fix searchbox isNeeded

--- a/components/listmaker_form-1/listmaker_form_element_this_searchbox.css
+++ b/components/listmaker_form-1/listmaker_form_element_this_searchbox.css
@@ -5,6 +5,11 @@
 
 .lmfe_inDiv.searchbox input[type="text"] {
 	padding-left: 40px;
+	color: #999;
+}
+.lmfe_inDiv.searchbox input[type="text"].completed {
+	font-weight: bold !important;
+    color: black;
 }
 
 .lmfe_inDiv.searchbox icon:before {
