--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -12,6 +12,7 @@
 	<link rel="shortcut icon" href="{_URL}/templates/{_THEME}/images/favicon.ico" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{canonical_tag}
+	{noindexdirtypages}
 	{html_extra_tags}
 	
 	<link rel="stylesheet" href="{_URL}/modules/font-awesome-4.7.0/css/font-awesome.min.css">
