--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="{_URL}/templates/{_THEME}/images/favicon.ico" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	{canonical_tag}
+	{Canonical::tag}
 	{noindexdirtypages}
 	{html_extra_tags}
 	
