--- a/components/alert-1/alerty.css
+++ b/components/alert-1/alerty.css
@@ -1,8 +1,9 @@
 
 #alerty {
+	cursor: default;
 	position: fixed;
-	left: 20px;
-	bottom: 20px;
+	left: 30px;
+	bottom: 30px;
 	z-index: 1111;
 }
 #alerty .msg {
