--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -12,14 +12,9 @@
 	<link rel="shortcut icon" href="{_URL}/templates/{_THEME}/images/favicon.ico" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	{Canonical::tag}
-	{noindexdirtypages}
-	{html_extra_tags}
-	
 	<link href="{_URL}/templates/{_THEME}/font/font.css" rel="stylesheet" type="text/css">
 	
-	{include_all_css_echotags}
-	{include_all_css_template_echotags}
+	{layout_headtag}
 	
 </head>
 
