--- a/components/main.admin-3/admin_login_form.css
+++ b/components/main.admin-3/admin_login_form.css
@@ -68,7 +68,7 @@
 	box-shadow: 0 0 20px #ccc;
 	border-radius: 4px;
 }
-.admin_login_form .container {
+.admin_login_form .admin-container {
 	padding:40px 50px 60px 50px;
 }
 
