--- a/templates/Default/template/html-tag-open.template.htm
+++ b/templates/Default/template/html-tag-open.template.htm
@@ -3,14 +3,14 @@
 
 <head>
 	
-	<META http-equiv=Content-Type content="text/html; charset=utf-8">
+	<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+	<meta name="keywords" content="{meta_kw}" />
+	<meta name="description" content="{meta_desc}" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>{meta_title}</title>
-	<META name="keywords" content="{meta_kw}" />
-	<META name="description" content="{meta_desc}" />
 
-	<link rel="shortcut icon" href="{_URL}/templates/{_THEME}/images/favicon.ico" >
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="{_URL}/{site_ico}" >
 		
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
