--- a/components/main.admin-3/do_admin_breadcrumb.css
+++ b/components/main.admin-3/do_admin_breadcrumb.css
@@ -17,30 +17,21 @@
 #do_admin .mainbar > .top > .breadcrumb > a:before {
 	color: #bbb !important;
 }
-#do_admin .mainbar > .top > .breadcrumb > .home {
 
-}
-#do_admin .mainbar > .top > .breadcrumb > .home:before {
-	font-family: FontAwesome;
-	content: "\f015";
-	font-size: 20px;
-	display: inline-block;
-	position: relative; top: 4px; right: 4px;
-	margin-left: 14px;
-}
-
-#do_admin .mainbar > .top > .breadcrumb > .etc {
-	margin: 0 0 0 0;
-}
-#do_admin .mainbar > .top > .breadcrumb > .etc:before {
+#do_admin .mainbar > .top > .breadcrumb > a:before {
 	font-family: FontAwesome;
 	content: "\f100";
 	font-size: 20px;
-	/* margin: 0 0 0 10px; */
 	display: inline-block;
 	margin-left: 0px;
 	position: relative; top: 3px; left: 0px;
 }
+#do_admin .mainbar > .top > .breadcrumb > a.home:before {
+	content: "\f015";
+	top: 4px; right: 4px;
+	margin-left: 14px;
+}
+
 #do_admin .mainbar > .top > .breadcrumb a:hover {
 	color: #ddd !important;
 }
