--- a/templates/Default/template/header.template.htm
+++ b/templates/Default/template/header.template.htm
@@ -3,7 +3,7 @@
 	
 	<div class="middle">
 		
-		<a alt="{main_title}" title="{main_title}" class="logo-container" href="{_URL}"><img alt="{main_title}" title="{main_title}" src="{_URL}/templates/{_THEME}/images/logo-postgah.png"/></a>
+		<a alt="{main_title}" title="{main_title}" class="logo-container" href="{_URL}"><img alt="{main_title}" title="{main_title}" src="{_URL}/{site_logo}"/></a>
 		
 		{pgSearch_form}
 
@@ -16,6 +16,7 @@
 
 	{anchor_back_to_admin_if_logged}
 	{anchor_back_to_user_if_logged}
+	
 </header>
 
 
