--- a/components/layout-1/layout_mg_layer_form.css
+++ b/components/layout-1/layout_mg_layer_form.css
@@ -22,6 +22,20 @@
 	padding: 10px 20px;
 	margin-right: 30px;
 }
+.layout_mg_layer_form input[name=name] {
+	display: inline-block;
+}
+.layout_mg_layer_form .jtoggle_w {
+	display: inline-block;
+	position: relative; top: 12px; right: 20px;
+}
+.layout_mg_layer_form .jtoggle_w > .title {
+	position: relative;
+	top: -10px;
+    right: 10px;
+    font-size: 15px;
+    color: gray;
+}
 .layout_mg_layer_form select {
 	line-height: 24px !important;
 	height: 45px;
