--- a/components/user-1/user_register_form.css
+++ b/components/user-1/user_register_form.css
@@ -2,17 +2,17 @@
 .user_register_form {
 	margin: auto;
 	display: block;
-	margin-right: 5%;
-	margin-bottom: 5%;
-	padding: 40px 0 40px 0;
+	/* margin-right: 5%; */
+	/* margin-bottom: 5%; */
+	/* padding: 40px 0 40px 0; */
 }
 .user_register_form .container {
-	margin: 0 15%;
+	/* margin: 0 15%; */
 }
 .user_register_form input {
 	/*direction: ltr;*/
 	display: block;
-	font: normal 16px tahoma;
+	font: normal 16px DefaultFont;
 	padding: 10px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -45,19 +45,19 @@
 }
 .user_register_form .d02 {
 	margin: 20px 0 50px 0;
-	font: bold 32px tahoma;
+	font: bold 32px DefaultFont;
 	color: #666;
 }
 .user_register_form .d03 {
-	font: normal 10px tahoma;
+	font: normal 10px DefaultFont;
 	margin: -5px 10px 10px 0;
 }
 .user_register_form .d04 {
-	font: normal 10px tahoma;
+	font: normal 10px DefaultFont;
 	margin-top: 20px;
 }
 .user_register_form .d05 {
-	font: normal 10px tahoma;
+	font: normal 10px DefaultFont;
 }
 .user_register_form .the_key {
 	display: none;
