--- a/components/contact-3/contact_vw_form.css
+++ b/components/contact-3/contact_vw_form.css
@@ -1,3 +1,4 @@
+
 .contact_vw_form {
 	padding: 5%;
 }
@@ -25,6 +26,10 @@
 	width: 49%;
 	margin-right: 1%;
 	border-radius: 8px;
+}
+
+.contact_vw_form form *:focus {
+	border: 1px solid red;
 }
 
 .contact_vw_form input {
